[package]
name = "project"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vortex"
path = "src/vortex.rs"

[[bin]]
name = "bootstrapper"
path = "src/bin/bootstrapper.rs"

[dependencies]
wry = "0.55"
tao = "0.35"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
eframe = "0.28"
egui = "0.28"
zip = "8.6.0"
